2.8 crashes when changing aperture ratio to 0 #60148

Closed
opened 2019-01-04 11:59:52 +01:00 by Simon · 7 comments

System Information
Operating system: Windows 10 Pro v1709
Graphics card: NVIDIA GeForce 840M

Blender Version
Broken: 2.80, 11f2c65128, 2019-01-02 18:50 as found on the splash screen

Short description of error
When Depth of Field is enabled in the Render settings, an Aperture value (in Camera settings) of 0 cause Blender to crash on rendering.

Exact steps for others to reproduce the error

  1. Open default scene
  2. Enable Depth of Field in Render tab
  3. Change Aperture values in Camera settings (Object Data tab), e.g. Focus Distance: 0, F-stop: 128, Blades: 0, Rotation: 0, Ratio: 0
  4. Start Rendering (Eevee)
  5. Blender crashes
**System Information** Operating system: Windows 10 Pro v1709 Graphics card: NVIDIA GeForce 840M **Blender Version** Broken: 2.80, 11f2c65128dc, 2019-01-02 18:50 as found on the splash screen **Short description of error** When Depth of Field is enabled in the Render settings, an Aperture value (in Camera settings) of 0 cause Blender to crash on rendering. **Exact steps for others to reproduce the error** 1) Open default scene 2) Enable Depth of Field in Render tab 3) Change Aperture values in Camera settings (Object Data tab), e.g. Focus Distance: 0, F-stop: 128, Blades: 0, Rotation: 0, Ratio: 0 4) Start Rendering (Eevee) 5) Blender crashes
Author

Added subscriber: @Mosbis

Added subscriber: @Mosbis

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Dalai Felinto self-assigned this 2019-01-04 13:01:24 +01:00

Super confirmed, and watch out, this made my computer hang.

Super confirmed, and watch out, this made my computer hang.

This issue was referenced by 1753177ad8

This issue was referenced by 1753177ad8acfabbcc74c3d8e20fa874f2b97167

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @fclem

Added subscriber: @fclem

@fclem first and foremost, we have a few division by zero asserts when using blades 0 (which happens to be the default) which I already fixed - bdbe484428:

*source/blender/draw/engines/eevee/eevee_depth_of_field.c:181:46: runtime error: division by zero*source/blender/draw/engines/eevee/eevee_depth_of_field.c:183:44: runtime error: division by zero

Now I committed a "fix" which is to limit the ratio to 0.01 (same I use for Cycles).
The render still goes drastically slow once it goes below 1.0, but it is not a bug (nor a crash per se) - 1753177ad8.

@fclem first and foremost, we have a few division by zero asserts when using blades 0 (which happens to be the default) which I already fixed - bdbe484428: ``` *source/blender/draw/engines/eevee/eevee_depth_of_field.c:181:46: runtime error: division by zero*source/blender/draw/engines/eevee/eevee_depth_of_field.c:183:44: runtime error: division by zero ``` Now I committed a "fix" which is to limit the ratio to 0.01 (same I use for Cycles). The render still goes drastically slow once it goes below 1.0, but it is not a bug (nor a crash per se) - 1753177ad8.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60148
No description provided.