Partial fix T60148: EEVEE hangs when anamorphic bokeh is too low

Fixed by setting the limit to the original limit I used for Cycles.
Rendering still goes extremely slow when bokeh is lower than 1.0.

But at least now it is "waitable". With lower numbers than 0.01 I don't
think we would ever get a render to finish.

@fclem feel free to address the real root of the problem, but I'm afraid
it may be a limitation of the algorithm you are using.